--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "test:watch": "jest --watch",
     "test:cov": "jest --coverage",
     "test:debug": "node --inspect-brk -r tsconfig-paths/register -r ts-node/register node_modules/.bin/jest --runInBand",
-    "test:e2e": "jest --config ./apps/microserv-rabbitmq-project/test/jest-e2e.json"
+    "test:e2e": "jest --config ./apps/microserv-rabbitmq-project/test/jest-e2e.json",
+    "start:all": "concurrently \"nest start books\" \"nest start users\" \"nest start email\""
   },
   "dependencies": {
     "@nestjs/common": "^11.0.12",
@@ -25,7 +26,13 @@
     "@nestjs/core": "^11.0.12",
     "@nestjs/microservices": "^11.0.12",
     "@nestjs/platform-express": "^11.0.12",
+    "@prisma/client": "^6.5.0",
+    "amqp-connection-manager": "^4.1.14",
     "amqplib": "^0.10.7",
+    "bcrypt": "^5.1.1",
+    "class-transformer": "^0.5.1",
+    "class-validator": "^0.14.1",
+    "joi": "^17.13.3",
     "reflect-metadata": "^0.2.2",
     "rxjs": "^7.8.2"
   },
@@ -39,6 +46,7 @@
     "@types/supertest": "^6.0.3",
     "@typescript-eslint/eslint-plugin": "^8.29.0",
     "@typescript-eslint/parser": "^8.29.0",
+    "concurrently": "^9.1.2",
     "eslint": "^9.23.0",
     "eslint-config-prettier": "^10.1.1",
     "eslint-plugin-prettier": "^5.2.5",
