--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
     "test:cov": "jest --coverage",
     "test:debug": "node --inspect-brk -r tsconfig-paths/register -r ts-node/register node_modules/.bin/jest --runInBand",
     "test:e2e": "jest --config ./apps/microserv-rabbitmq-project/test/jest-e2e.json",
-    "start:all": "concurrently \"nest start books\" \"nest start users\" \"nest start email\""
+    "start:all": "concurrently \"nest start books\" \"nest start users\" \"nest start email\" \"nest start auth\""
   },
   "dependencies": {
     "@nestjs/common": "^11.0.12",
