--- a/package.json
+++ b/package.json
@@ -24,7 +24,9 @@
     "@nestjs/common": "^11.0.12",
     "@nestjs/config": "^4.0.2",
     "@nestjs/core": "^11.0.12",
+    "@nestjs/jwt": "^11.0.0",
     "@nestjs/microservices": "^11.0.12",
+    "@nestjs/passport": "^11.0.5",
     "@nestjs/platform-express": "^11.0.12",
     "@prisma/client": "^6.5.0",
     "amqp-connection-manager": "^4.1.14",
@@ -33,6 +35,7 @@
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.1",
     "joi": "^17.13.3",
+    "passport-jwt": "^4.0.1",
     "reflect-metadata": "^0.2.2",
     "rxjs": "^7.8.2"
   },
