--- a/package.json
+++ b/package.json
@@ -21,20 +21,25 @@
     "start:all": "concurrently \"nest start books\" \"nest start users\" \"nest start email\" \"nest start auth\""
   },
   "dependencies": {
+    "@aws-sdk/client-s3": "^3.787.0",
     "@nestjs/common": "^11.0.12",
     "@nestjs/config": "^4.0.2",
     "@nestjs/core": "^11.0.12",
     "@nestjs/jwt": "^11.0.0",
+    "@nestjs/mapped-types": "*",
     "@nestjs/microservices": "^11.0.12",
     "@nestjs/passport": "^11.0.5",
     "@nestjs/platform-express": "^11.0.12",
     "@prisma/client": "^6.5.0",
+    "@types/multer": "^1.4.12",
     "amqp-connection-manager": "^4.1.14",
     "amqplib": "^0.10.7",
     "bcrypt": "^5.1.1",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.1",
     "joi": "^17.13.3",
+    "multer": "^1.4.5-lts.2",
+    "multer-s3": "^3.0.1",
     "passport-jwt": "^4.0.1",
     "reflect-metadata": "^0.2.2",
     "rxjs": "^7.8.2"
